force-app/main/default/objects/SVMXA360__CONF_ProcessWizard__c/SVMXA360__CONF_ProcessWizard__c.object-meta.xml
<CustomObject>
    <description>Stores the profile-level SPM Wizard accessibility details.</description>
    <label>Process Wizard</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Wizard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Wizards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>