force-app/main/default/objects/SVMXA360__CONF_ProcessWizard__c/fields/SVMXA360__Active__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If True, the SPM wizard will be available for use.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>