force-app/main/default/objects/SVMXA360__CONF_ProcessWizard__c/fields/SVMXA360__ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ObjectAPIName__c</fullName>
    <description>Stores the object name mapped or assigned for that SPM wizard.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>