force-app/main/default/objects/SVMXA360__CONF_ProcessWizard__c/fields/SVMXA360__Scope__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Scope__c</fullName>
    <description>Stores the scope of the wizard.</description>
    <label>Scope</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Object</fullName>
                <default>true</default>
                <label>Object</label>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>