force-app/main/default/objects/SVMXA360__CONF_ProcessWizard__c/fields/SVMXA360__StepCompletionType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__StepCompletionType__c</fullName>
    <description>Stores the completion type option of the wizard (Checklist, Standard)</description>
    <inlineHelpText>Stores the completion type option of the wizard (Checklist, Standard)</inlineHelpText>
    <label>Step Completion Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Checklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>