force-app/main/default/objects/SVMXA360__CONF_ProcessWizard__c/fields/SVMXA360__VisibilityCriteria__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__VisibilityCriteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Visibility of the Wizard decided based on this expression.</description>
    <label>Visibility Criteria</label>
    <referenceTo>SVMXA360__CONF_Expression__c</referenceTo>
    <relationshipLabel>Process Wizards</relationshipLabel>
    <relationshipName>Process_Wizards</relationshipName>
    <type>Lookup</type>
</CustomField>